src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Azienda_Store__c</fullName>
        <label>Azienda Store</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAP__c</fullName>
        <label>CAP</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Caporea__c</fullName>
        <label>Caporea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chiave_Negozio_Clienti__c</fullName>
        <description>Chiave surrogata store e affiliati, verrà caricata anche la chiave surrogata dei clienti</description>
        <externalId>true</externalId>
        <label>Chiave Negozio/Clienti</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chiave_Store__c</fullName>
        <description>chiave esterna surrogata per store</description>
        <label>Chiave Store</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Codice_Cliente__c</fullName>
        <label>Codice Cliente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Fiscale__c</fullName>
        <label>Codice Fiscale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Sorgente_Sistema__c</fullName>
        <label>Codice Sorgente Sistema</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Store_Affiliato__c</fullName>
        <description>codice naturale degli store e degli affiliati</description>
        <label>Codice Store Affiliato</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Store__c</fullName>
        <description>codice naturale degli store</description>
        <label>Codice Store</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Country_ISO_Code__c</fullName>
        <label>Country ISO Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AN</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSE__DS_DataScout_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cloud Customer 360: used internally for the data conversion process</description>
        <inlineHelpText>Cloud Customer 360: used internally for the data conversion process</inlineHelpText>
        <label>Converted from Cloud Customer 360</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Hierarchy_Level__c</fullName>
        <description>The level of this node in the hierarchy, starting from 1 (Ultimate Parent). A blank value means there is no hierarchy for this account</description>
        <inlineHelpText>The level of this node in the hierarchy, starting from 1 (Ultimate Parent). A blank value means there is no hierarchy for this account</inlineHelpText>
        <label>Hierarchy Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Legal_Form__c</fullName>
        <description>company&apos;s legal form</description>
        <label>Legal Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Synchronize__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cloud Customer 360: synchronize Account data with Bean</description>
        <inlineHelpText>Cloud Customer 360: synchronize Account data with Bean</inlineHelpText>
        <label>Synchronize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Ultimate_Parent_Name__c</fullName>
        <description>Cloud Customer 360: Name of the Ultimate Parent Account</description>
        <inlineHelpText>Cloud Customer 360: Name of the Ultimate Parent Account</inlineHelpText>
        <label>Ultimate Parent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Ultimate_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cloud Customer 360: Ultimate Parent Account</description>
        <inlineHelpText>Cloud Customer 360: Ultimate Parent Account</inlineHelpText>
        <label>Ultimate Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subsidiaries</relationshipLabel>
        <relationshipName>Subsidiaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSE__Demo_Installed_Products__c</fullName>
        <label>Installed Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dish Washer</fullName>
                </value>
                <value>
                    <fullName>Fryer</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSE__Domain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSE__X_Internal__c</fullName>
        <description>Used by Cloud Customer 360 internally</description>
        <inlineHelpText>Used by Cloud Customer 360 internally</inlineHelpText>
        <label>X_Internal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Divisione_Vendita__c</fullName>
        <label>Divisione Vendita</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_2__c</fullName>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_3__c</fullName>
        <label>Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Estremi_di_Pagamento__c</fullName>
        <label>Estremi di Pagamento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fidelity_Card__c</fullName>
        <label>Fidelity Card</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_Cellulare__c</fullName>
        <label>Numero Cellulare</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Numero_Prenotazione__c</fullName>
        <label>Numero Prenotazione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Punto_Vendita__c</fullName>
        <label>Punto Vendita</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Store_Unieuro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Store Unieuro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Telefono_2__c</fullName>
        <label>Telefono 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telefono_Cellulare_2__c</fullName>
        <label>Telefono Cellulare 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telefono_Lavoro_2__c</fullName>
        <label>Telefono Lavoro 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telefono_Lavoro__c</fullName>
        <label>Telefono Lavoro</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tipo_Attivita__c</fullName>
        <label>Tipo Attivita</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Cliente</fullName>
        <active>true</active>
        <description>Tipizzazione dell&apos;account per clienti</description>
        <label>Cliente</label>
    </recordTypes>
    <recordTypes>
        <fullName>Negozio</fullName>
        <active>true</active>
        <description>Tipizzazione dell&apos;account per Punti vendita e Affiliati</description>
        <label>Negozio</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>